--- a/test/index.html
+++ b/test/index.html
@@ -20,7 +20,10 @@
 <script type="text/javascript" src="/mr-angular-client.js"></script>
 <script type="text/javascript">
     angular.module('MRTest',['Moonridge']).controller('testCtrl', function ($scope) {
-        $scope.LQ = $scope.model.liveQuery({}, 20, 0);
+        $scope.LQ = $scope.model.liveQuery({}, 20, 0).then(function (d) {
+            console.log(d);
+            debugger;
+        });
     });
 </script>
 </body>
