--- a/test/index.html
+++ b/test/index.html
@@ -17,9 +17,10 @@
 <script src="bower_components/angular/angular.js" type="text/javascript"></script>
 <script type="text/javascript" src="bower_components/angular-moment/angular-moment.min.js"></script>
 <script src="/rpc/rpc-client-angular.js"></script>
-<script type="text/javascript" src="/mr-angular-client.js"></script>
+<script type="text/javascript" src="/moonridge-angular-client.js"></script>
 <script type="text/javascript">
     angular.module('MRTest',['Moonridge']).controller('testCtrl', function ($scope) {
+
         $scope.LQ = $scope.model.liveQuery({}, 20, 0).then(function (d) {
             console.log(d);
             debugger;
