delete operation fixed, all three operations(CrUD) are now functional. It works, so we shall publish on NPM - Hurrey!

--- a/test/index.html
+++ b/test/index.html
@@ -7,7 +7,7 @@
 <label for="query"></label><input type="text" id="query" ng-model='te'>
 <div>
     <p ng-repeat="fighter in LQ.docs">
-        {{ fighter.name }}
+        {{ fighter }}
     </p>
 </div>
 
