--- a/test/index.html
+++ b/test/index.html
@@ -3,7 +3,7 @@
 <head>
     <title></title>
 </head>
-<body mr-controller="testCtrl" mr-backend="local" mr-model="fighter">
+<body mr-controller="testCtrl" mr-backend="local" mr-models="user,fighter">
     <label for="query">Name</label><input type="text" id="query" ng-model='name'>
     <label for="health">age</label><input type="number" id="health" ng-model='health'>
     <button ng-click="create()">create</button>
@@ -19,11 +19,13 @@
     <script src="/bower_components/jquery/jquery.min.js" type="text/javascript"></script>
     <script src="/bower_components/angular/angular.js" type="text/javascript"></script>
     <script type="text/javascript" src="/bower_components/angular-moment/angular-moment.min.js"></script>
-    <script src="/rpc/rpc-client-angular.js"></script>
-    <script type="text/javascript" src="/moonridge-angular-client.js"></script>
+    <!--<script src="/rpc/rpc-client-angular.js"></script>-->
+    <!--<script type="text/javascript" src="/moonridge-angular-client.min.js"></script>-->
+    <script type="text/javascript" src="/moonridge-angular-client-rpcbundle.min.js"></script>
+
     <script type="text/javascript">
         angular.module('MRTest', ['Moonridge']).controller('testCtrl', function ($scope) {
-            var liveQuery = $scope.MR.liveQuery;
+            var liveQuery = $scope.MR.fighter.liveQuery;
             $scope.LQ = liveQuery({sort: 'name'});
             $scope.LQ.promise.then(function (LQ) {
                 console.log(LQ);
@@ -34,7 +36,7 @@
             };
 
             $scope.create = function () {
-                $scope.MR.rpc.create({name: $scope.name, health: $scope.health})
+                $scope.MR.fighter.rpc.create({name: $scope.name, health: $scope.health})
 
             };
 
