--- a/test/index.html
+++ b/test/index.html
@@ -5,7 +5,7 @@
 </head>
 <body mr-controller="testCtrl" mr-backend="local" mr-models="user,fighter">
     <label for="query">Name</label><input type="text" id="query" ng-model='name'>
-    <label for="health">age</label><input type="number" id="health" ng-model='health'>
+    <label for="health">health</label><input type="number" id="health" ng-model='health'>
     <button ng-click="create()">create</button>
     <button ng-click="changeQuery()">limit +1</button>
     <br/>
