queries are now indexed and no query can exist more than once in the client, if you create query that already exists, then the existing copy is returned instead of new LQ

--- a/test/index.html
+++ b/test/index.html
@@ -35,6 +35,7 @@
             var liveQuery = MR.fighter.liveQuery;
             var limit = 2;
             $scope.LQ = liveQuery().sort('health').limit(limit).exec();
+//            $scope.LQsec = liveQuery().sort('health').limit(limit).skip(1).exec();
             $scope.oneLQ = liveQuery().findOne().exec();
             $scope.cLQ = liveQuery().count().exec();
             $scope.LQ.promise.then(function (LQ) {
