simpler query builder on server/client, now always sends arguments as array, for multiple calls it is now always object without any special property

--- a/test/index.html
+++ b/test/index.html
@@ -48,7 +48,7 @@
 
             $scope.changeQuery = function () {
                 limit += 1;
-                $scope.LQ.modifyQuery().limit(limit);
+                $scope.LQ = liveQuery().sort('health').limit(limit).exec();
             };
 
             $scope.hit = function (fighter) {
