when.js changed to bluebird for slightly better performance, better test, fixed a crash when created new entity with into sorted liveQuery, user should authorize always when manipulating it's own entity

--- a/test/index.html
+++ b/test/index.html
@@ -78,7 +78,7 @@
             });
             $timeout(function () {
                 //just an example, in real application you would use here some auth token instead of nick
-                dfd.resolve({url: 'http://localhost:8080', hs: { query: "nick=capaj" } } );
+                dfd.resolve({url: 'http://localhost:8080', hs: { query: "nick=admin" } } );
             }, 900)
         });
     </script>
