--- a/test/index.html
+++ b/test/index.html
@@ -4,6 +4,34 @@
     <title>Moonridge browser test suite</title>
     <!--uncomment es5-shim for IE8 support-->
     <!--<script type="text/javascript" src="/es5-shim.js"></script>-->
+    <link rel="stylesheet" href="/mr-spinner.css" type='text/css'>
+    <style type="text/css">
+        .left-slide.ng-enter,
+        .left-slide.ng-leave
+        {
+            -webkit-transition: 350ms cubic-bezier(0.390, 0.575, 0.565, 1.000) all;
+            -moz-transition: 350ms cubic-bezier(0.390, 0.575, 0.565, 1.000) all;
+            -ms-transition: 350ms cubic-bezier(0.390, 0.575, 0.565, 1.000) all;
+            -o-transition: 350ms cubic-bezier(0.390, 0.575, 0.565, 1.000) all;
+            transition: 350ms cubic-bezier(0.390, 0.575, 0.565, 1.000) all;
+            position: relative;
+            display: block;
+        }
+
+        .left-slide.ng-enter.left-slide.ng-enter-active,
+        .left-slide.ngleave {
+            opacity: 1;
+            left: 0;
+            height: 30px;
+        }
+
+        .left-slide.ng-leave.left-slide.ng-leave-active,
+        .left-slide.ng-enter {
+            opacity: 0;
+            left: -100px;
+            height: 0px;
+        }
+    </style>
 </head>
 <body mr-controller="testCtrl" mr-backend="local" mr-models="user,fighter">
     <label for="query">Name</label><input type="text" id="query" ng-model='name'>
@@ -14,7 +42,7 @@
     Total documents: <span ng-bind="cLQ.count"></span>
     <div>
         <h1>Find query</h1>
-        <p ng-repeat="fighter in LQ.docs">
+        <p mr-repeat="fighter in LQ" class="left-slide">
             {{ fighter }} <button ng-click="hit(fighter)">Hit</button> <button ng-click="heal(fighter)">Heal</button> <button ng-click="remove(fighter)">Del</button>
         </p>
         <h1>Find One query</h1>
@@ -27,6 +55,7 @@
 
     <script src="/bower_components/jquery/jquery.min.js" type="text/javascript"></script>
     <script src="/bower_components/angular/angular.js" type="text/javascript"></script>
+    <script src="/bower_components/angular-animate/angular-animate.js" type="text/javascript"></script>
     <script type="text/javascript" src="/bower_components/angular-moment/angular-moment.min.js"></script>
     <script src="/rpc/rpc-client-angular.js"></script>
     <script type="text/javascript" src="/moonridge-angular-client.js"></script>
