default backend option introduced

--- a/test/index.html
+++ b/test/index.html
@@ -38,7 +38,7 @@
     <button ng-click="user()">User</button>
     <button ng-click="admin()">Admin</button>
 </div>
-   <div mr-controller="testCtrl" mr-backend="local" mr-models="user,fighter">
+   <div mr-controller="testCtrl" mr-models="user,fighter">
        <label for="query">Name</label><input type="text" id="query" ng-model='name'>
        <label for="health">health</label><input type="number" id="health" ng-model='health'>
        <button ng-click="create()">create</button>
