added schemaInit property to options, validating client channel now to prevent crashes when client is not exposing what he should, clientside push method was missing, which caused crashes in some scenarios bumped version to 0.3.17

--- a/test/index.html
+++ b/test/index.html
@@ -44,7 +44,7 @@
        <button ng-click="create()">create</button>
        <button ng-click="changeQuery()">limit +1</button>
        <br/>
-       Total documents: <span ng-bind="cLQ.count"></span>
+       Total documents: <span ng-bind="cLQ.count"></span> || Limit: <span ng-bind="limit"></span>
        <div>
            <h1>Find query</h1>
            <p mr-repeat="fighter in LQ" class="left-slide">
