--- a/e2e-smoketest/index.html
+++ b/e2e-smoketest/index.html
@@ -8,8 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style type="text/css">
         .left-slide.ng-enter,
-        .left-slide.ng-leave
-        {
+        .left-slide.ng-leave {
             -webkit-transition: 350ms cubic-bezier(0.390, 0.575, 0.565, 1.000) all;
             -moz-transition: 350ms cubic-bezier(0.390, 0.575, 0.565, 1.000) all;
             -ms-transition: 350ms cubic-bezier(0.390, 0.575, 0.565, 1.000) all;
@@ -34,55 +33,65 @@
         }
 
         [ng-click] {
-        cursor: pointer;
+            cursor: pointer;
         }
-        mr-query-dropdown{
+
+        mr-query-dropdown {
             margin-top: 20px;
         }
     </style>
     <link href="css/bootstrap.min.css" rel="stylesheet">
 </head>
-<body >
+<body>
 <div ng-controller="loginCtrl">
     <button ng-click="user()">User</button>
     <button ng-click="admin()">Admin</button>
 </div>
-   <div mr-controller="testCtrl" mr-models="user,fighter"><!--You must use mr-controller instead of ng-controller-->
-       <label for="query">Name</label><input type="text" id="query" ng-model='name'>
-       <label for="health">health</label><input type="number" id="health" ng-model='health'>
-       <button ng-click="create()">create</button>
-       <button ng-click="changeQuery()">limit +1</button>
-       <br/>
+<div mr-controller="testCtrl" mr-models="user,fighter"><!--You must use mr-controller instead of ng-controller-->
+    <label for="query">Name</label><input type="text" id="query" ng-model='name'>
+    <label for="health">health</label><input type="number" id="health" ng-model='health'>
+    <button ng-click="create()">create</button>
+    <button ng-click="changeQuery()">limit +1</button>
+    <br/>
 
-       <br/>
-       Total documents: <span ng-bind="cLQ.count"></span> || Limit: <input type="number" ng-model="LQ.query.limit[0]">
-       <div class="row query-header">
-           <div class="col-md-8">
-               <h1>Find query</h1>
-           </div>
-           <div class="col-md-4">
-               <mr-query-dropdown query="LQ" gui-path-texts="dropdownTexts"></mr-query-dropdown>
-           </div>
-       </div>
-           <p mr-repeat="fighter in LQ" class="left-slide">
-               {{ fighter }} <button ng-click="hit(fighter)">Hit</button> <button ng-click="heal(fighter)">Heal</button> <button ng-click="remove(fighter)">Del</button>
-           </p>
-           <h1>Find One query</h1>
-           <p>
-               {{ oneLQ.doc }} <button ng-click="hit(oneLQ.doc)">Hit</button> <button ng-click="heal(oneLQ.doc)">Heal</button> <button ng-click="remove(oneLQ.doc)">Del</button>
-           </p>
-       </div>
-   </div>
+    <br/>
+    Total documents: <span ng-bind="cLQ.count"></span> || Limit: <input type="number" ng-model="LQ.query.limit[0]">
+
+    <div class="row query-header">
+        <div class="col-md-8">
+            <h1>Find query</h1>
+        </div>
+        <div class="col-md-4">
+            <mr-query-dropdown query="LQ" gui-path-texts="dropdownTexts"></mr-query-dropdown>
+        </div>
+    </div>
+    <p mr-repeat="fighter in LQ" class="left-slide">
+        {{ fighter }}
+        <button ng-click="hit(fighter)">Hit</button>
+        <button ng-click="heal(fighter)">Heal</button>
+        <button ng-click="remove(fighter)">Del</button>
+    </p>
+    <h1>Find One query</h1>
+
+    <p>
+        {{ oneLQ.doc }}
+        <button ng-click="hit(oneLQ.doc)">Hit</button>
+        <button ng-click="heal(oneLQ.doc)">Heal</button>
+        <button ng-click="remove(oneLQ.doc)">Del</button>
+    </p>
+    <h4>Admin: {{admin.doc}}</h4>
+
+</div>
 
 
-    <script src="/socket.io/socket.io.js"></script>
-    <script src="/bower_components/jquery/dist/jquery.min.js" type="text/javascript"></script>
-	<script src="js/bootstrap.min.js"></script>
-	<script src="/bower_components/angular/angular.js" type="text/javascript"></script>
-    <script src="/bower_components/angular-animate/angular-animate.js" type="text/javascript"></script>
-    <script type="text/javascript" src="/bower_components/angular-moment/angular-moment.min.js"></script>
-    <script type="text/javascript" src="/moonridge-angular-client.js"></script>
-    <script src="/mr-test-ctrl.js" type="text/javascript"></script>
+<script src="/socket.io/socket.io.js"></script>
+<script src="/bower_components/jquery/dist/jquery.min.js" type="text/javascript"></script>
+<script src="js/bootstrap.min.js"></script>
+<script src="/bower_components/angular/angular.js" type="text/javascript"></script>
+<script src="/bower_components/angular-animate/angular-animate.js" type="text/javascript"></script>
+<script type="text/javascript" src="/bower_components/angular-moment/angular-moment.min.js"></script>
+<script type="text/javascript" src="/moonridge-angular-client.js"></script>
+<script src="/test_ctrl.js" type="text/javascript"></script>
 
 </body>
 </html>
