authentication process rewritten, global authentication removed from showcase-I realized that most commons scenario doesn't need globa auth before connection is established

--- a/e2e-smoketest/index.html
+++ b/e2e-smoketest/index.html
@@ -43,8 +43,9 @@
 </head>
 <body>
 <div ng-controller="loginCtrl">
-    <button ng-click="user()">User</button>
-    <button ng-click="admin()">Admin</button>
+    <button class="btn" ng-click="user()">as User</button>
+    <button class="btn" ng-click="admin()">as Admin</button>
+
 </div>
 <div mr-controller="testCtrl" mr-models="user,fighter"><!--You must use mr-controller instead of ng-controller-->
     <label for="query">Name</label><input type="text" id="query" ng-model='name'>
